# skyrimnet-plugin-narrative-engine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .spriggit  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  NarrativeEngine.ppj.in  PSScriptAnalyzerSettings.psd1  README.md  SkyrimSE.code-workspace  build.ps1  check-esl-formids.ps1  format.ps1  package.ps1  plugin.cpp  setup-mod-folder.ps1  sync-esp.ps1  vcpkg-configuration.json  vcpkg.json
.claude/skills/release/: SKILL.md
dashboard/: index.html  package-lock.json  package.json  rollup.config.mjs  styles.css  tsconfig.json
dashboard/src/: App.tsx  index.tsx  stateStore.ts  types.ts
dashboard/src/components/: ActionDispatchTable.tsx  DecisionList.tsx  EventList.tsx  LastEvaluation.tsx  LetterPoolOverview.tsx  PhasePanel.tsx  RecentDispatchDetail.tsx  StatusBanner.tsx  TabBar.tsx
docs/: CUSTOM_PROMPTS.md  DESIGN_GOALS.md  DEVELOPMENT.md  LLM_RESPONSE_HANDLING.md  MAIN_THREAD_STUTTER_AUDIT.md  THREADING_MODEL.md
docs/engine-findings/: README.md  ai-package-flags-for-script-driven-combat-handoff.md  avoid-setghost-with-ai-packages.md  hooking-engine-functions-with-minhook.md  starting-a-quest-from-cpp.md
docs/implementation/: PHASE_01_MVP.md  PHASE_02_COMBAT_EVENTS.md  PHASE_03_ACTION_TOOLBOX.md  PHASE_04_LETTER_POOL_AND_NPC_LETTER_ACTION.md  PHASE_05_NPC_VISIT_ACTION.md  PHASE_06_BEAT_SYSTEM_REFACTOR.md  PHASE_07_MCM_PAGE.md  PHASE_07b_MCM_HELPER_PIVOT.md  PHASE_08_SETTINGS_TAB.md  PHASE_09_TRAVEL_AND_WEATHER.md  PHASE_10_THREADING_DISCIPLINE.md  PHASE_XX_CHANGE_WEATHER_BEAT.md
docs/prior-art/: ARCHITECTURE.md  DEPLOYMENT_LAYOUT.md  ESP_STRUCTURE.md  FEATURE_OVERVIEW.md  NAME_RESOLUTION_FAILURE_MODES.md  PATTERNS_AND_LESSONS.md  README.md  REPO_MAP.md  SKYRIMNET_PLUGIN_CONTRACT.md
docs/vanilla/keywords/: all.csv
docs/vanilla/regions/: holds.csv
esp/: NarrativeEngine.esp
esp/Source/Scripts/: _ne_BanditAmbushQuest.psc  _ne_BanditAmbushQuest_SpawnedBandit.psc  _ne_MCM.psc  _ne_PooledLetterQuest.psc  _ne_VisitQuest.psc  _ne__QF__ne_BanditAmbushQuest_0500FB00.psc  _ne__QF__ne_PooledLetterQuest_0500081A.psc  _ne__QF__ne_PooledLetterQuest_0500081B.psc  _ne__QF__ne_PooledLetterQuest_0500081C.psc  _ne__QF__ne_PooledLetterQuest_0500081D.psc  _ne__QF__ne_PooledLetterQuest_0500081E.psc  _ne__QF__ne_PooledLetterQuest_0500081F.psc  _ne__QF__ne_PooledLetterQuest_05000820.psc  _ne__QF__ne_PooledLetterQuest_05000821.psc  _ne__QF__ne_PooledLetterQuest_05000822.psc  _ne__QF__ne_PooledLetterQuest_05000823.psc  _ne__QF__ne_PooledLetterQuest_05000824.psc  _ne__QF__ne_PooledLetterQuest_05000825.psc  _ne__QF__ne_PooledLetterQuest_05000826.psc  _ne__QF__ne_PooledLetterQuest_05000827.psc  _ne__QF__ne_PooledLetterQuest_05000828.psc  _ne__QF__ne_PooledLetterQuest_05000829.psc  _ne__QF__ne_PooledLetterQuest_0500082A.psc  _ne__QF__ne_PooledLetterQuest_0500082B.psc  _ne__QF__ne_PooledLetterQuest_0500082C.psc  _ne__QF__ne_PooledLetterQuest_05051817.psc  _ne__QF__ne_VisitQuest_0500FB2E.psc
esp/plugin/: RecordData.yaml  spriggit-meta.json
esp/plugin/Books/: _ne_PooledLetter00 - 000816_NarrativeEngine.esp.yaml  _ne_PooledLetter01 - 000803_NarrativeEngine.esp.yaml  _ne_PooledLetter02 - 000804_NarrativeEngine.esp.yaml  _ne_PooledLetter03 - 000805_NarrativeEngine.esp.yaml  _ne_PooledLetter04 - 000806_NarrativeEngine.esp.yaml  _ne_PooledLetter05 - 000807_NarrativeEngine.esp.yaml  _ne_PooledLetter06 - 000808_NarrativeEngine.esp.yaml  _ne_PooledLetter07 - 000809_NarrativeEngine.esp.yaml  _ne_PooledLetter08 - 00080A_NarrativeEngine.esp.yaml  _ne_PooledLetter09 - 00080B_NarrativeEngine.esp.yaml  _ne_PooledLetter10 - 00080C_NarrativeEngine.esp.yaml  _ne_PooledLetter11 - 00080D_NarrativeEngine.esp.yaml  _ne_PooledLetter12 - 00080E_NarrativeEngine.esp.yaml  _ne_PooledLetter13 - 00080F_NarrativeEngine.esp.yaml  _ne_PooledLetter14 - 000810_NarrativeEngine.esp.yaml  _ne_PooledLetter15 - 000811_NarrativeEngine.esp.yaml  _ne_PooledLetter16 - 000812_NarrativeEngine.esp.yaml  _ne_PooledLetter17 - 000813_NarrativeEngine.esp.yaml  _ne_PooledLetter18 - 000814_NarrativeEngine.esp.yaml  _ne_PooledLetter19 - 000815_NarrativeEngine.esp.yaml
esp/plugin/Factions/: _ne_LetterSenderFaction - 000818_NarrativeEngine.esp.yaml  _ne_VisitSenderFaction - 000819_NarrativeEngine.esp.yaml
esp/plugin/FormLists/: _ne_AmbushSpawnMarkerTypeList - 000801_NarrativeEngine.esp.yaml
esp/plugin/Quests/: _ne_BanditAmbushQuest - 000800_NarrativeEngine.esp.yaml  _ne_MCMQuest - 000830_NarrativeEngine.esp.yaml  (+21 more)
include/: ActionDispatcher.h  ActionRegistry.h  AliasWalkFilter.h  AlphaCanon.h  AmbushAction.h  AmbushBeat.h  AsyncDispatch.h  BeatParamHelpers.h  BeatRegistry.h  BeatSystem.h  BeatUtils.h  CameraVisibility.h  CombatEventLog.h  ConsoleCommand.h  CourierUtils.h  DashboardUIManager.h  DecisionLog.h  Decorators.h  EngineUtils.h  EvalDispatch.h  EvaluationPipeline.h  EventHistoryWriter.h  EventLogUtil.h  FactionDesignationUtils.h  HoldGrid.h  IAction.h  IBeat.h  JsonUtils.h  LLMTextSanitizer.h  LetterComposer.h  LetterPool.h  LetterSmokeTest.h  LocationKeywords.h  MCMEventSink.h  MainThread.h  MainThreadEngine.h  NPCLetterAction.h  NPCLetterBeat.h  NPCVisitAction.h  NPCVisitBeat.h  (+20 more)
scripts/: lint-powershell.ps1
src/: ActionDispatcher.cpp  ActionRegistry.cpp  AliasWalkFilter.cpp  AlphaCanon.cpp  AmbushAction.cpp  AmbushBeat.cpp  AsyncDispatch.cpp  BeatParamHelpers.cpp  BeatRegistry.cpp  BeatSystem.cpp  CameraVisibility.cpp  CombatEventLog.cpp  ConsoleCommand.cpp  CourierUtils.cpp  DashboardUIManager.cpp  DecisionLog.cpp  Decorators.cpp  EngineUtils.cpp  EvalDispatch.cpp  EvaluationPipeline.cpp  EventHistoryWriter.cpp  EventLogUtil.cpp  FactionDesignationUtils.cpp  HoldGrid.cpp  JsonUtils.cpp  LLMTextSanitizer.cpp  LetterComposer.cpp  LetterPool.cpp  LetterSmokeTest.cpp  LocationKeywords.cpp  MCMEventSink.cpp  MainThread.cpp  MainThreadEngine.cpp  NPCLetterAction.cpp  NPCLetterBeat.cpp  NPCVisitAction.cpp  NPCVisitBeat.cpp  PhaseTracker.cpp  Plugin.cpp  PrismaUI.cpp  (+14 more)
statics/Seq/: NarrativeEngine.seq
(+18 files in other folders)
